// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should have available networks 1`] = `
Object {
  "coin": "ARK",
  "crypto": Object {
    "expirationType": "height",
    "signingMethods": Object {
      "mnemonic": true,
      "wif": true,
    },
    "slip44": 111,
  },
  "currency": Object {
    "symbol": "Ѧ",
    "ticker": "ARK",
  },
  "explorer": "https://explorer.ark.io/",
  "featureFlags": Object {
    "Client": Object {
      "broadcast": true,
      "configuration": true,
      "delegate": true,
      "delegates": true,
      "fees": true,
      "syncing": true,
      "transaction": true,
      "transactions": true,
      "voters": true,
      "votes": true,
      "wallet": true,
      "wallets": true,
    },
    "Derivation": Object {
      "bip39": true,
      "bip44": true,
    },
    "Fee": Object {
      "all": true,
    },
    "Identity": Object {
      "address": Object {
        "mnemonic": true,
        "multiSignature": true,
        "privateKey": true,
        "publicKey": true,
        "wif": true,
      },
      "keyPair": Object {
        "mnemonic": true,
        "privateKey": false,
        "wif": true,
      },
      "privateKey": Object {
        "mnemonic": true,
        "wif": true,
      },
      "publicKey": Object {
        "mnemonic": true,
        "multiSignature": true,
        "wif": true,
      },
      "wif": Object {
        "mnemonic": true,
      },
    },
    "Internal": Object {
      "fastDelegateSync": true,
    },
    "Ledger": Object {
      "getPublicKey": true,
      "getVersion": true,
      "signMessage": true,
      "signTransaction": true,
    },
    "Link": Object {
      "block": true,
      "transaction": true,
      "wallet": true,
    },
    "Message": Object {
      "sign": true,
      "verify": true,
    },
    "Miscellaneous": Object {
      "dynamicFees": true,
      "memo": true,
    },
    "Peer": Object {
      "search": true,
    },
    "Transaction": Object {
      "delegateRegistration": true,
      "delegateResignation": true,
      "htlcClaim": false,
      "htlcLock": false,
      "htlcRefund": false,
      "ipfs": true,
      "multiPayment": true,
      "multiSignature": true,
      "secondSignature": true,
      "transfer": true,
      "vote": true,
    },
  },
  "governance": Object {
    "voting": Object {
      "delegateCount": 51,
      "enabled": true,
      "maximumPerTransaction": 1,
      "maximumPerWallet": 1,
    },
  },
  "id": "ark.mainnet",
  "knownWallets": "https://raw.githubusercontent.com/ArkEcosystem/common/master/mainnet/known-wallets-extended.json",
  "name": "Mainnet",
  "networking": Object {
    "hosts": Array [
      "https://wallets.ark.io",
    ],
    "hostsMultiSignature": Array [
      "https://musig1.ark.io",
    ],
  },
  "transactionTypes": Array [
    "delegate-registration",
    "delegate-resignation",
    "htlc-claim",
    "htlc-lock",
    "htlc-refund",
    "ipfs",
    "multi-payment",
    "multi-signature",
    "second-signature",
    "transfer",
    "vote",
  ],
  "type": "live",
}
`;

exports[`should have available networks 2`] = `
Object {
  "coin": "ARK",
  "crypto": Object {
    "expirationType": "height",
    "signingMethods": Object {
      "mnemonic": true,
      "wif": true,
    },
    "slip44": 1,
  },
  "currency": Object {
    "symbol": "DѦ",
    "ticker": "DARK",
  },
  "explorer": "https://dexplorer.ark.io/",
  "featureFlags": Object {
    "Client": Object {
      "broadcast": true,
      "configuration": true,
      "delegate": true,
      "delegates": true,
      "fees": true,
      "syncing": true,
      "transaction": true,
      "transactions": true,
      "voters": true,
      "votes": true,
      "wallet": true,
      "wallets": true,
    },
    "Derivation": Object {
      "bip39": true,
      "bip44": true,
    },
    "Fee": Object {
      "all": true,
    },
    "Identity": Object {
      "address": Object {
        "mnemonic": true,
        "multiSignature": true,
        "privateKey": true,
        "publicKey": true,
        "wif": true,
      },
      "keyPair": Object {
        "mnemonic": true,
        "privateKey": false,
        "wif": true,
      },
      "privateKey": Object {
        "mnemonic": true,
        "wif": true,
      },
      "publicKey": Object {
        "mnemonic": true,
        "multiSignature": true,
        "wif": true,
      },
      "wif": Object {
        "mnemonic": true,
      },
    },
    "Internal": Object {
      "fastDelegateSync": true,
    },
    "Ledger": Object {
      "getPublicKey": true,
      "getVersion": true,
      "signMessage": true,
      "signTransaction": true,
    },
    "Link": Object {
      "block": true,
      "transaction": true,
      "wallet": true,
    },
    "Message": Object {
      "sign": true,
      "verify": true,
    },
    "Miscellaneous": Object {
      "dynamicFees": true,
      "memo": true,
    },
    "Peer": Object {
      "search": true,
    },
    "Transaction": Object {
      "delegateRegistration": true,
      "delegateResignation": true,
      "htlcClaim": true,
      "htlcLock": true,
      "htlcRefund": true,
      "ipfs": true,
      "multiPayment": true,
      "multiSignature": true,
      "secondSignature": true,
      "transfer": true,
      "vote": true,
    },
  },
  "governance": Object {
    "voting": Object {
      "delegateCount": 51,
      "enabled": true,
      "maximumPerTransaction": 1,
      "maximumPerWallet": 1,
    },
  },
  "id": "ark.devnet",
  "knownWallets": "https://raw.githubusercontent.com/ArkEcosystem/common/master/devnet/known-wallets-extended.json",
  "name": "Devnet",
  "networking": Object {
    "hosts": Array [
      "https://dwallets.ark.io",
    ],
    "hostsMultiSignature": Array [
      "https://dmusig1.ark.io",
    ],
  },
  "transactionTypes": Array [
    "delegate-registration",
    "delegate-resignation",
    "htlc-claim",
    "htlc-lock",
    "htlc-refund",
    "ipfs",
    "multi-payment",
    "multi-signature",
    "second-signature",
    "transfer",
    "vote",
  ],
  "type": "test",
}
`;

exports[`should have available networks 3`] = `
Object {
  "coin": "Compendia",
  "crypto": Object {
    "expirationType": "height",
    "signingMethods": Object {
      "mnemonic": true,
      "wif": true,
    },
    "slip44": 543,
  },
  "currency": Object {
    "symbol": "ß",
    "ticker": "BIND",
  },
  "explorer": "https://bindscan.io/",
  "featureFlags": Object {
    "Client": Object {
      "broadcast": true,
      "configuration": true,
      "delegate": true,
      "delegates": true,
      "fees": true,
      "syncing": true,
      "transaction": true,
      "transactions": true,
      "voters": true,
      "votes": true,
      "wallet": true,
      "wallets": true,
    },
    "Derivation": Object {
      "bip39": true,
      "bip44": true,
    },
    "Fee": Object {
      "all": true,
    },
    "Identity": Object {
      "address": Object {
        "mnemonic": true,
        "multiSignature": true,
        "privateKey": true,
        "publicKey": true,
        "wif": true,
      },
      "keyPair": Object {
        "mnemonic": true,
        "privateKey": false,
        "wif": true,
      },
      "privateKey": Object {
        "mnemonic": true,
        "wif": true,
      },
      "publicKey": Object {
        "mnemonic": true,
        "multiSignature": true,
        "wif": true,
      },
      "wif": Object {
        "mnemonic": true,
      },
    },
    "Internal": Object {
      "fastDelegateSync": true,
    },
    "Ledger": Object {
      "getPublicKey": true,
      "getVersion": true,
      "signMessage": true,
      "signTransaction": true,
    },
    "Link": Object {
      "block": true,
      "transaction": true,
      "wallet": true,
    },
    "Message": Object {
      "sign": true,
      "verify": true,
    },
    "Miscellaneous": Object {
      "dynamicFees": true,
      "memo": true,
    },
    "Peer": Object {
      "search": true,
    },
    "Transaction": Object {
      "delegateRegistration": true,
      "delegateResignation": true,
      "htlcClaim": false,
      "htlcLock": false,
      "htlcRefund": false,
      "ipfs": true,
      "multiPayment": true,
      "multiSignature": true,
      "secondSignature": true,
      "transfer": true,
      "vote": true,
    },
  },
  "governance": Object {
    "voting": Object {
      "delegateCount": 47,
      "enabled": true,
      "maximumPerTransaction": 1,
      "maximumPerWallet": 1,
    },
  },
  "id": "compendia.mainnet",
  "name": "Mainnet",
  "networking": Object {
    "hosts": Array [
      "https://apis.compendia.org",
    ],
  },
  "transactionTypes": Array [
    "delegate-registration",
    "delegate-resignation",
    "htlc-claim",
    "htlc-lock",
    "htlc-refund",
    "ipfs",
    "multi-payment",
    "multi-signature",
    "second-signature",
    "transfer",
    "vote",
  ],
  "type": "live",
}
`;

exports[`should have available networks 4`] = `
Object {
  "coin": "Bitcoin",
  "crypto": Object {
    "expirationType": "height",
    "signingMethods": Object {
      "mnemonic": true,
      "wif": true,
    },
    "slip44": 0,
  },
  "currency": Object {
    "symbol": "Ƀ",
    "ticker": "BTC",
  },
  "explorer": "https://blockstream.info/",
  "featureFlags": Object {
    "Client": Object {
      "broadcast": true,
      "transaction": true,
      "wallet": true,
    },
    "Derivation": Object {
      "bip39": true,
      "bip44": true,
      "bip49": true,
      "bip84": true,
    },
    "Identity": Object {
      "address": Object {
        "mnemonic": true,
        "multiSignature": true,
        "privateKey": true,
        "publicKey": true,
        "wif": true,
      },
      "keyPair": Object {
        "mnemonic": true,
        "privateKey": true,
        "wif": true,
      },
      "privateKey": Object {
        "mnemonic": true,
        "wif": true,
      },
      "publicKey": Object {
        "mnemonic": true,
        "wif": true,
      },
      "wif": Object {
        "mnemonic": true,
      },
    },
    "Link": Object {
      "block": true,
      "transaction": true,
      "wallet": true,
    },
    "Message": Object {
      "sign": true,
      "verify": true,
    },
    "Miscellaneous": Object {
      "utxo": true,
    },
    "Transaction": Object {
      "transfer": true,
    },
  },
  "governance": Object {
    "voting": Object {
      "delegateCount": 0,
      "enabled": false,
      "maximumPerTransaction": 0,
      "maximumPerWallet": 0,
    },
  },
  "id": "btc.livenet",
  "name": "Livenet",
  "networking": Object {
    "hosts": Array [
      "https://coins.com/api/btc",
    ],
  },
  "transactionTypes": Array [
    "transfer",
  ],
  "type": "live",
}
`;

exports[`should have available networks 5`] = `
Object {
  "coin": "Bitcoin",
  "crypto": Object {
    "expirationType": "height",
    "signingMethods": Object {
      "mnemonic": true,
      "wif": true,
    },
    "slip44": 0,
  },
  "currency": Object {
    "symbol": "Ƀ",
    "ticker": "BTC",
  },
  "explorer": "https://blockstream.info/testnet/",
  "featureFlags": Object {
    "Client": Object {
      "broadcast": true,
      "transaction": true,
      "wallet": true,
    },
    "Derivation": Object {
      "bip39": true,
      "bip44": true,
      "bip49": true,
      "bip84": true,
    },
    "Identity": Object {
      "address": Object {
        "mnemonic": true,
        "multiSignature": true,
        "privateKey": true,
        "publicKey": true,
        "wif": true,
      },
      "keyPair": Object {
        "mnemonic": true,
        "privateKey": true,
        "wif": true,
      },
      "privateKey": Object {
        "mnemonic": true,
        "wif": true,
      },
      "publicKey": Object {
        "mnemonic": true,
        "wif": true,
      },
      "wif": Object {
        "mnemonic": true,
      },
    },
    "Link": Object {
      "block": true,
      "transaction": true,
      "wallet": true,
    },
    "Message": Object {
      "sign": true,
      "verify": true,
    },
    "Miscellaneous": Object {
      "utxo": true,
    },
    "Transaction": Object {
      "transfer": true,
    },
  },
  "governance": Object {
    "voting": Object {
      "delegateCount": 0,
      "enabled": false,
      "maximumPerTransaction": 0,
      "maximumPerWallet": 0,
    },
  },
  "id": "btc.testnet",
  "name": "Testnet",
  "networking": Object {
    "hosts": Array [
      "https://coins.com/api/btc",
    ],
  },
  "transactionTypes": Array [
    "transfer",
  ],
  "type": "test",
}
`;

exports[`should have available networks 6`] = `
Object {
  "coin": "Ethereum",
  "crypto": Object {
    "expirationType": "height",
    "networkId": "1",
    "signingMethods": Object {
      "mnemonic": true,
      "privateKey": true,
    },
    "slip44": 60,
  },
  "currency": Object {
    "symbol": "Ξ",
    "ticker": "ETH",
  },
  "explorer": "https://etherscan.io/",
  "featureFlags": Object {
    "Derivation": Object {
      "bip39": true,
      "bip44": true,
    },
    "Identity": Object {
      "address": Object {
        "privateKey": true,
        "publicKey": true,
      },
      "keyPair": Object {
        "privateKey": true,
      },
    },
    "Link": Object {
      "block": true,
      "transaction": true,
      "wallet": true,
    },
    "Message": Object {
      "sign": true,
      "verify": true,
    },
    "Transaction": Object {
      "transfer": true,
    },
  },
  "governance": Object {
    "voting": Object {
      "delegateCount": 0,
      "enabled": false,
      "maximumPerTransaction": 0,
      "maximumPerWallet": 0,
    },
  },
  "id": "eth.mainnet",
  "name": "Mainnet",
  "networking": Object {
    "hosts": Array [
      "https://platform.ark.io/api/eth",
    ],
  },
  "transactionTypes": Array [
    "transfer",
  ],
  "type": "live",
}
`;

exports[`should have available networks 7`] = `
Object {
  "coin": "Ethereum",
  "crypto": Object {
    "expirationType": "height",
    "networkId": "2",
    "signingMethods": Object {
      "mnemonic": true,
      "privateKey": true,
    },
    "slip44": 60,
  },
  "currency": Object {
    "symbol": "Ξ",
    "ticker": "ETH",
  },
  "explorer": "https://kovan.etherscan.io/",
  "featureFlags": Object {
    "Derivation": Object {
      "bip39": true,
      "bip44": true,
    },
    "Identity": Object {
      "address": Object {
        "privateKey": true,
        "publicKey": true,
      },
      "keyPair": Object {
        "privateKey": true,
      },
    },
    "Link": Object {
      "block": true,
      "transaction": true,
      "wallet": true,
    },
    "Message": Object {
      "sign": true,
      "verify": true,
    },
    "Transaction": Object {
      "transfer": true,
    },
  },
  "governance": Object {
    "voting": Object {
      "delegateCount": 0,
      "enabled": false,
      "maximumPerTransaction": 0,
      "maximumPerWallet": 0,
    },
  },
  "id": "eth.kovan",
  "name": "Kovan",
  "networking": Object {
    "hosts": Array [
      "https://coins.com/api/eth",
    ],
  },
  "transactionTypes": Array [
    "transfer",
  ],
  "type": "test",
}
`;

exports[`should have available networks 8`] = `
Object {
  "coin": "Ethereum",
  "crypto": Object {
    "expirationType": "height",
    "networkId": "3",
    "signingMethods": Object {
      "mnemonic": true,
      "privateKey": true,
    },
    "slip44": 60,
  },
  "currency": Object {
    "symbol": "Ξ",
    "ticker": "ETH",
  },
  "explorer": "https://ropsten.etherscan.io/",
  "featureFlags": Object {
    "Derivation": Object {
      "bip39": true,
      "bip44": true,
    },
    "Identity": Object {
      "address": Object {
        "privateKey": true,
        "publicKey": true,
      },
      "keyPair": Object {
        "privateKey": true,
      },
    },
    "Link": Object {
      "block": true,
      "transaction": true,
      "wallet": true,
    },
    "Message": Object {
      "sign": true,
      "verify": true,
    },
    "Transaction": Object {
      "transfer": true,
    },
  },
  "governance": Object {
    "voting": Object {
      "delegateCount": 0,
      "enabled": false,
      "maximumPerTransaction": 0,
      "maximumPerWallet": 0,
    },
  },
  "id": "eth.ropsten",
  "name": "Ropsten",
  "networking": Object {
    "hosts": Array [
      "https://coins.com/api/eth",
    ],
  },
  "transactionTypes": Array [
    "transfer",
  ],
  "type": "test",
}
`;

exports[`should have available networks 9`] = `
Object {
  "coin": "Ethereum",
  "crypto": Object {
    "expirationType": "height",
    "networkId": "4",
    "signingMethods": Object {
      "mnemonic": true,
      "privateKey": true,
    },
    "slip44": 60,
  },
  "currency": Object {
    "symbol": "Ξ",
    "ticker": "ETH",
  },
  "explorer": "https://rinkeby.etherscan.io/",
  "featureFlags": Object {
    "Derivation": Object {
      "bip39": true,
      "bip44": true,
    },
    "Identity": Object {
      "address": Object {
        "privateKey": true,
        "publicKey": true,
      },
      "keyPair": Object {
        "privateKey": true,
      },
    },
    "Link": Object {
      "block": true,
      "transaction": true,
      "wallet": true,
    },
    "Message": Object {
      "sign": true,
      "verify": true,
    },
    "Transaction": Object {
      "transfer": true,
    },
  },
  "governance": Object {
    "voting": Object {
      "delegateCount": 0,
      "enabled": false,
      "maximumPerTransaction": 0,
      "maximumPerWallet": 0,
    },
  },
  "id": "eth.rinkeby",
  "name": "Rinkeby",
  "networking": Object {
    "hosts": Array [
      "https://coins.com/api/eth",
    ],
  },
  "transactionTypes": Array [
    "transfer",
  ],
  "type": "test",
}
`;

exports[`should have available networks 10`] = `
Object {
  "coin": "Ethereum",
  "crypto": Object {
    "expirationType": "height",
    "networkId": "5",
    "signingMethods": Object {
      "mnemonic": true,
      "privateKey": true,
    },
    "slip44": 60,
  },
  "currency": Object {
    "symbol": "Ξ",
    "ticker": "ETH",
  },
  "explorer": "https://goerli.etherscan.io/",
  "featureFlags": Object {
    "Derivation": Object {
      "bip39": true,
      "bip44": true,
    },
    "Identity": Object {
      "address": Object {
        "privateKey": true,
        "publicKey": true,
      },
      "keyPair": Object {
        "privateKey": true,
      },
    },
    "Link": Object {
      "block": true,
      "transaction": true,
      "wallet": true,
    },
    "Message": Object {
      "sign": true,
      "verify": true,
    },
    "Transaction": Object {
      "transfer": true,
    },
  },
  "governance": Object {
    "voting": Object {
      "delegateCount": 0,
      "enabled": false,
      "maximumPerTransaction": 0,
      "maximumPerWallet": 0,
    },
  },
  "id": "eth.goerli",
  "name": "Goerli",
  "networking": Object {
    "hosts": Array [
      "https://coins.com/api/eth",
    ],
  },
  "transactionTypes": Array [
    "transfer",
  ],
  "type": "test",
}
`;
